Add Schema.org structured data inclusion

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
     <!-- SEO and Hreflang Tags -->
     {% include seo.html %}
     
+    <!-- Schema.org Structured Data -->
+    {% include schema.html %}
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
